fixed overflow into white

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -195,6 +195,9 @@
     background-color: $darkest-color;
     color: $white-color;
     padding: 10px 0;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
 
 /*publications page*/
