--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -29,6 +29,8 @@
 
 .project{
     background-color: $base-color;
+    height: 100%;
+    overflow-y: auto;
 
 }
 
